kubernetes/apps/sgc/idp/authentik/dockge-services.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "dockge-luna.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-dockge-luna
spec:
  externalName: dockge-luna
  type: ExternalName
  ports:
    - port: 443
      targetPort: 443
      name: https
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "dockge-celestia.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-dockge-celestia
spec:
  externalName: dockge-celestia
  type: ExternalName
  ports:
    - port: 443
      targetPort: 443
      name: https
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "dockge-as.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-dockge-as
spec:
  externalName: dockge-as
  type: ExternalName
  ports:
    - port: 443
      targetPort: 443
      name: https
