kubernetes/apps/sgc/idp/authentik/tailscale-services.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "dockge-luna.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-dockge-luna
spec:
  externalName: dockge-luna
  type: ExternalName
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "dockge-celestia.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-dockge-celestia
spec:
  externalName: dockge-celestia
  type: ExternalName

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "dockge-as.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-dockge-as
spec:
  externalName: dockge-as
  type: ExternalName
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "luna.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-proxmox-luna
spec:
  externalName: luna
  type: ExternalName
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "celestia.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-proxmox-celestia
spec:
  externalName: celestia
  type: ExternalName

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.0/service.json
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: "alpha-site.${TAILSCALE_DOMAIN}"
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/proxy-group: egress
  name: service-proxmox-alpha-site
spec:
  externalName: alpha-site
  type: ExternalName
