kubernetes/apps/sgc/idp/authentik/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-icons-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:

  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik-icons.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: minio
          namespace: sgc
          port: api
          passHostHeader: true
      middlewares:
        - name: authentik-icons-middleware
          namespace: sgc
        - name: strip-query-string
          namespace: network
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/middleware_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-icons-middleware
spec:
  addPrefix:
    prefix: /iris/
